--- a/src/application.properties
+++ b/src/application.properties
@@ -1,8 +1,8 @@
 # Database Credentials
 db.driverName = com.mysql.cj.jdbc.Driver
-db.connectionString = jdbc:mysql://localhost:3306/shopping-cart
-db.username = root
-db.password = root
+db.connectionString = jdbc:mysql://shopping-cart.czn8j7vjozva.us-east-1.rds.amazonaws.com:3306/shopping-cart
+db.username = admin
+db.password = password
 
 #Mailer Credentials
 mailer.email=your_email
