--- a/src/application.properties
+++ b/src/application.properties
@@ -1,6 +1,6 @@
 # Database Credentials
 db.driverName = com.mysql.cj.jdbc.Driver
-db.connectionString = jdbc:mysql://shopping-cart.czn8j7vjozva.us-east-1.rds.amazonaws.com:3306/shopping-cart
+db.connectionString = jdbc:mysql://shopping-cart.cz3ifqyj7tni.us-east-1.rds.amazonaws.com:3306/shopping-cart
 db.username = admin
 db.password = password
 
