--- a/src/application.properties
+++ b/src/application.properties
@@ -1,7 +1,7 @@
 # Database Credentials
 db.driverName = com.mysql.cj.jdbc.Driver
 db.connectionString = jdbc:mysql://shopping-cart.cz3ifqyj7tni.us-east-1.rds.amazonaws.com:3306/shopping-cart
-db.username = admin
+db.username = root
 db.password = password
 
 #Mailer Credentials
