--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,19 +1,20 @@
 version: 0.2
-
 phases:
   install:
     runtime-versions:
       java: corretto8
   pre_build:
     commands:
-      - echo "Installing dependencies or performing pre-build steps"
+    - echo In the pre_build phase...
   build:
     commands:
-      - mvn clean install
+    - echo Build started on `date`
   post_build:
     commands:
-      - echo "Build completed on `date`"
-
+    - echo Build completed on `date`
+    - mvn package
+    - mv target/shopping-cart-0.0.1-SNAPSHOT.war shopping-cart-0.0.1-SNAPSHOT.war
 artifacts:
   files:
-    - target/shopping-cart-0.0.1-SNAPSHOT.war
+  - shopping-cart-0.0.1-SNAPSHOT.war
+  - .ebextensions/**/*
